tests/diagnostics/tests/ui/non_fastwritable.stderr
error[E0277]: the trait bound `Foo: askama::FastWritable` is not satisfied
  --> tests/ui/non_fastwritable.rs:13:20
   |
13 |     type Content = Foo;
   |                    ^^^ unsatisfied trait bound
   |
help: the trait `askama::FastWritable` is not implemented for `Foo`
  --> tests/ui/non_fastwritable.rs:7:1
   |
 7 | struct Foo;
   | ^^^^^^^^^^
   = help: the following other types implement trait `askama::FastWritable`:
             &T
             &mut T
             AAttrs
             Arc<T>
             AreaAttrs
             Areas
             Arguments<'_>
             AudioAttrs
           and $N others
note: required by a bound in `granola::html::PTag::Content`
  --> $WORKSPACE/crates/granola/src/html/elements/text_content/p.rs
   |
   | #[derive(Debug, Clone, Default, Template, Granola, Recipe)]
   |                                                    ^^^^^^ required by this bound in `PTag::Content`
   = note: this error originates in the derive macro `Recipe` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: recipe content `Foo` can't bake back into `Cow<'static, str>`
  --> tests/ui/non_fastwritable.rs:13:20
   |
13 |     type Content = Foo;
   |                    ^^^ try using `BakeFrom<Foo>`
   |
help: the trait `BakeInto<Cow<'static, str>>` is not implemented for `Foo`
  --> tests/ui/non_fastwritable.rs:7:1
   |
 7 | struct Foo;
   | ^^^^^^^^^^
   = note: for non-foreign types, consider providing a conversion by implementing `From<Foo>` for `Cow<'static, str>`
note: required by a bound in `granola::html::PTag::Content`
  --> $WORKSPACE/crates/granola/src/html/elements/text_content/p.rs
   |
   | #[derive(Debug, Clone, Default, Template, Granola, Recipe)]
   |                                                    ^^^^^^ required by this bound in `PTag::Content`
   = note: this error originates in the derive macro `Recipe` (in Nightly builds, run with -Z macro-backtrace for more info)
